Fix tag input on Safari

--- a/src/sass/modules/_forms.scss
+++ b/src/sass/modules/_forms.scss
@@ -110,6 +110,7 @@ rl-tag-input, rl-tag-input-item, .ng2-tag-input-field {
     background: #fff;
     padding-left: 5px !important;
     border: 1px dotted #cdcdcd !important;
+    line-height: 12px !important;
 
     &::-webkit-input-placeholder {
     color: $inputPlaceholderColor !important;
